# SemanticICD10

./: .gitignore  .replit  Procfile  README.md  app.py  models.py  pyproject.toml  requirements.txt
assets/: style.css
static/: style.css
templates/: datenschutz.html  impressum.html  index.html
utils/: data_loader.py  search_engine.py
